--- a/index2.html
+++ b/index2.html
@@ -114,6 +114,6 @@
     
 
 
-    <script src="https://github.com/AnkitAvi1311/US/blob/master/main.js"></script>
+    <script src="https://rawgit.com/AnkitAvi1311/US/master/main.js"></script>
 </body>
 </html>
